tools/fixtures/should_fail/bad_array_index.x3s
* Demonstrates invalid string array index
$arr = array alloc: size=0
$val = $arr['foo']
return null
